# Real-World-Cyber-Defense

./: .editorconfig  .gitignore  00-EVERYTHING-IS-READY.md  00-READ-ME-FIRST.md  ANTIVIRUS-FIXES.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLETION-CHECKLIST.md  COMPLETION_REPORT.md  CONTRIBUTING.md  CORE-DETECTION-OVERHAUL.md  CyberDefense-Installer.py  CyberDefense-Launch.vbs  CyberDefense.spec  DESKTOP-EDITION-SUMMARY.md  DETECTION-EFFECTIVENESS.md  DEVELOPMENT.md  DOCS-INDEX.md  DOWNLOAD.md  DOWNLOADS.md  FILE_INDEX.md  FIRST-TIME-USERS.md  FIXED-EVERYTHING-REPORT.md  FREE-GITHUB-INSTALL.md  GETTING_STARTED.md  GETTING_STARTED_DESKTOP.md  GITHUB-README.md  GITHUB-RELEASE-CHECKLIST.md  GITHUB-SETUP-FREE.md  GITHUB-UPDATE.md  IMPROVEMENT-SUMMARY.md  INSTALL-ME.bat  INSTALL.md  INSTALLATION-COMPLETE.md  INSTALLER-GUIDE.md  INTEGRATION_GUIDE.py  LAUNCH-CHECKLIST.md  LICENSE  LIMITATIONS.md  (+84 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/PULL_REQUEST_TEMPLATE/: pull_request.md
.github/workflows/: build-signed.yml  linux-build.yml  test.yml  windows-build.yml
detection/: __init__.py  behavioral.py  heuristic_pe.py  ml_detector.py  yara_engine.py
icons/: create_icon_ico.py  generate-ico.py  icon.txt
minifilter-rust/: Cargo.toml  DRIVER-SPEC.md  README.md
minifilter-rust/src/: lib.rs
packaging/: build-appimage.sh  build-dmg.sh  build-msi.ps1
packaging/wix/: CyberDefense.wxs
signing/: sign-artifacts.py
src/background/: background.js
src/options/: options.css  options.html  options.js
src/popup/: popup.css  popup.html  popup.js
src/utils/: constants.js  helpers.js
tests/: __init__.py  conftest.py  test_background_service.py  test_eicar.py  test_threat_engine.py  test_yara_integration.py
tools/: cleanup.ps1  system_cleaner.bat
