[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cyber-defense"
version = "2.1.0"
description = "Real-World Cyber Defense - Desktop security tool for Windows and Linux"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "DarkRX01", email = "darkrx01@proton.me"}
]
maintainers = [
    {name = "DarkRX01", email = "darkrx01@proton.me"}
]
keywords = [
    "security",
    "cybersecurity",
    "phishing",
    "malware",
    "tracker-blocking",
    "privacy",
    "threat-detection",
    "desktop-app"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: X11 Applications :: Qt",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP :: Site Management :: Link Checking",
    "Typing :: Typed"
]
requires-python = ">=3.9"
dependencies = [
    "PyQt5>=5.15.9",
    "requests>=2.31.0",
    "pyperclip>=1.8.2",
    "psutil>=5.9.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-qt>=4.2.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "types-requests>=2.31.0",
    "pyinstaller>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/DarkRX01/Real-World-Cyber-Defense"
Documentation = "https://github.com/DarkRX01/Real-World-Cyber-Defense#readme"
Repository = "https://github.com/DarkRX01/Real-World-Cyber-Defense.git"
Issues = "https://github.com/DarkRX01/Real-World-Cyber-Defense/issues"
Changelog = "https://github.com/DarkRX01/Real-World-Cyber-Defense/blob/main/CHANGELOG.md"

[project.scripts]
cyber-defense = "app_main:main"

[project.gui-scripts]
cyber-defense-gui = "app_main:main"

[tool.setuptools]
py-modules = [
    "app_main",
    "threat_engine",
    "background_service",
    "realtime_monitor",
    "quarantine",
    "update_system",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["detection*"]

[tool.ruff]
target-version = "py39"
line-length = 120
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "S",      # flake8-bandit (security)
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "S101",   # use of assert (OK in tests)
    "S603",   # subprocess call with shell=False
    "S607",   # starting process with partial path
]

[tool.ruff.per-file-ignores]
"test_*.py" = ["S101"]
"tests/*.py" = ["S101"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --tb=short"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["app_main", "threat_engine", "background_service"]
omit = ["tests/*", "build-*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
